# esp32

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/font/: font.c  font.h
components/BSP/my_camera_ov2640/: my_camera_ov2640.c  my_camera_ov2640.h
components/BSP/tft_st7735/: st7735.c  st7735.h
components/BSP/wifi_connect/: wifi_connect.c  wifi_connect.h
main/: CMakeLists.txt  hello_world_main.c
